Avances activity de menu de opciones. Ediciones en estilo de botones. Se agrega evento onClick a imagen de carro de compras.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Delivery Ya</string>
+
+
+
+    <string name="titulo_menu">Ordene su comida aqui</string>
+    <string name="boton_postres">Postres</string>
+    <string name="boton_pizzas">Pizzas</string>
+    <string name="boton_hamburgesas">Hamburgesas</string>
+    <string name="boton_parrillas">Parrillas</string>
+    <string name="boton_helados">Helados</string>
+    <string name="boton_panaderia">Panaderia</string>
 </resources>
