style: reacomodacion de la barra de busqueda en activity Menu Opciones. Se agregan imagenes para usar en botones de categorias en la misma activity. add: evento para la barra de busqueda, aun no funciona.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Delivery Ya</string>
 
 
+    <string name="buscador">¿Qué estás buscando?</string>
     <string name="titulo_menu">Ordene su comida aqui</string>
     <string name="boton_postres">Postres</string>
     <string name="boton_pizzas">Pizzas</string>
